[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Paddle.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ScoreBox.tscn" type="PackedScene" id=5]

[node name="Game" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Ball" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 512, 300 )
_sections_unfolded = [ "Transform" ]

[node name="TopWall" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 512, 50 )
_sections_unfolded = [ "Transform" ]

[node name="BottomWall" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( 512, 550 )
_sections_unfolded = [ "Transform" ]

[node name="LeftPaddle" parent="." index="3" instance=ExtResource( 4 )]

position = Vector2( 50, 300 )
_sections_unfolded = [ "Transform" ]

[node name="RightPaddle" parent="." index="4" instance=ExtResource( 4 )]

position = Vector2( 974, 300 )
_sections_unfolded = [ "Transform" ]

[node name="ScoreBoxLeft" parent="." index="5" instance=ExtResource( 5 )]

position = Vector2( -10, 298 )

[node name="ScoreBoxRight" parent="." index="6" instance=ExtResource( 5 )]

position = Vector2( 1034, 302 )

[node name="P1Score" type="Label" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 300.0
margin_top = 10.0
margin_right = 340.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="P2Score" type="Label" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 724.0
margin_top = 10.0
margin_right = 764.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="Speed" type="Label" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 500.0
margin_top = 10.0
margin_right = 540.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Speed"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="NewGame" type="Button" parent="." index="10"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 441.0
margin_top = 215.0
margin_right = 584.0
margin_bottom = 265.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New Game"
flat = false
align = 1

[connection signal="score" from="ScoreBoxLeft" to="." method="_on_ScoreBoxLeft_score"]

[connection signal="score" from="ScoreBoxRight" to="." method="_on_ScoreBoxRight_score"]

[connection signal="pressed" from="NewGame" to="." method="_on_NewGame_pressed"]


